@@ -57,7 +57,7 @@ namespace Installer
     public abstract class DiskImage :
         Bam.Core.Module
     {
-        public static Bam.Core.FileKey Key = Bam.Core.FileKey.Generate("Installer");
+        public static Bam.Core.PathKey Key = Bam.Core.PathKey.Generate("Installer");
 
         private Bam.Core.TokenizedString SourceFolderPath;
         private Bam.Core.PreBuiltTool Compiler;
@@ -73,7 +73,7 @@ namespace Installer
 
         public void
         SourceFolder<DependentModule>(
-            Bam.Core.FileKey key) where DependentModule : Bam.Core.Module, new()
+            Bam.Core.PathKey key) where DependentModule : Bam.Core.Module, new()
         {
             var dependent = Bam.Core.Graph.Instance.FindReferencedModule<DependentModule>();
             this.DependsOn(dependent);
