@@ -33,7 +33,7 @@ namespace Publisher
     public class ObjCopyModule :
         Bam.Core.Module
     {
-        public static Bam.Core.FileKey Key = Bam.Core.FileKey.Generate("ObjCopy Destination");
+        public static Bam.Core.PathKey Key = Bam.Core.PathKey.Generate("ObjCopy Destination");
 
         private Bam.Core.Module TheSourceModule;
         private IObjCopyToolPolicy Policy;
@@ -75,7 +75,7 @@ namespace Publisher
             }
         }
 
-        public Bam.Core.FileKey SourceKey
+        public Bam.Core.PathKey SourceKey
         {
             get;
             private set;
